--- a/site/about-us.html
+++ b/site/about-us.html
@@ -101,7 +101,7 @@
                   </li>
                   <li class="rd-nav-item active"><a class="rd-nav-link" href="about-us.html">About us</a>
                   </li>
-                  <li class="rd-nav-item"><a class="rd-nav-link" href="typography.html">Our Initiative</a>
+                  <li class="rd-nav-item"><a class="rd-nav-link" href="initiative.html">Our Initiative</a>
                   </li>
                   <li class="rd-nav-item"><a class="rd-nav-link" href="contacts.html">Contact Us</a>
                   </li>
